--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,30 @@
 version: '3.1'
 services:
   stats-server:
+    build: ./stats/service
+    image: stats-server
+    container_name: gateway-host
     ports:
       - "9090:9090"
+    depends_on: stats-db
+    environment:
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_NAME=stats-db
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
 
   stats-db:
     image: postgres:14-alpine
+    container_name: stats-db
+    volumes:
+      - /var/lib/postgresql/stats-db
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_DB=stats-db
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
 
   ewm-service:
     ports:
@@ -13,3 +32,12 @@ services:
 
   ewm-db:
     image: postgres:14-alpine
+    container_name: ewm-db
+    volumes:
+      - /var/lib/postgresql/ewm-db
+    ports:
+      - "6542:5432"
+    environment:
+      - POSTGRES_DB=ewm-db
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
