--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -19,8 +19,8 @@
     </properties>
 
     <modules>
-        <module>client</module>
-        <module>dto</module>
-        <module>service</module>
+        <module>stats-client</module>
+        <module>stats-dto</module>
+        <module>stats-server</module>
     </modules>
 </project>
