--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: '3.1'
 services:
   stats-server:
-    build: ./stats/service
+    build: stats/stats-server
     image: stats-server
-    container_name: gateway-host
+    container_name: stats-server
     ports:
       - "9090:9090"
-    depends_on: stats-db
+    depends_on:
+      - stats-db
     environment:
-      - DB_HOST=db
+      - DB_HOST=stats-db
       - DB_PORT=5432
       - DB_NAME=stats-db
       - POSTGRES_USER=test
@@ -16,7 +17,7 @@ services:
 
   stats-db:
     image: postgres:14-alpine
-    container_name: stats-db
+    container_name: postgres-stats-db
     volumes:
       - /var/lib/postgresql/stats-db
     ports:
@@ -27,12 +28,25 @@ services:
       - POSTGRES_PASSWORD=test
 
   ewm-service:
+    build: main-service
+    image: main-service
+    container_name: main-service
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
+      - stats-server
+    environment:
+      - DB_HOST=ewm-db
+      - DB_PORT=5432
+      - DB_NAME=ewm-db
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
+
 
   ewm-db:
     image: postgres:14-alpine
-    container_name: ewm-db
+    container_name: postgres-ewm-db
     volumes:
       - /var/lib/postgresql/ewm-db
     ports:
