add status create hit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   stats-server:
-    build: stats/stats-server
+    build: ./stats/stats-server
     image: stats-server
     container_name: stats-server
     ports:
@@ -27,31 +27,31 @@ services:
       - POSTGRES_USER=test
       - POSTGRES_PASSWORD=test
 
-  ewm-service:
-    build: main-service
-    image: main-service
-    container_name: main-service
-    ports:
-      - "8080:8080"
-    depends_on:
-      - ewm-db
-      - stats-server
-    environment:
-      - DB_HOST=ewm-db
-      - DB_PORT=5432
-      - DB_NAME=ewm-db
-      - POSTGRES_USER=test
-      - POSTGRES_PASSWORD=test
-
-
-  ewm-db:
-    image: postgres:14-alpine
-    container_name: postgres-ewm-db
-    volumes:
-      - /var/lib/postgresql/ewm-db
-    ports:
-      - "6542:5432"
-    environment:
-      - POSTGRES_DB=ewm-db
-      - POSTGRES_USER=test
-      - POSTGRES_PASSWORD=test
+#  ewm-service:
+#    build: ./main-service
+#    image: main-service
+#    container_name: main-service
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - ewm-db
+#      - stats-server
+#    environment:
+#      - DB_HOST=ewm-db
+#      - DB_PORT=5432
+#      - DB_NAME=ewm-db
+#      - POSTGRES_USER=test
+#      - POSTGRES_PASSWORD=test
+#
+#
+#  ewm-db:
+#    image: postgres:14-alpine
+#    container_name: postgres-ewm-db
+#    volumes:
+#      - /var/lib/postgresql/ewm-db
+#    ports:
+#      - "6542:5432"
+#    environment:
+#      - POSTGRES_DB=ewm-db
+#      - POSTGRES_USER=test
+#      - POSTGRES_PASSWORD=test
