--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 server.port=9090
 
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.sql.init.mode=always
 
 logging.level.org.springframework.orm.jpa=INFO
