--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=9090
-
+server.port=8080
+service-name=ewm-stats-server
+stats-server.url=http://localhost:9090
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
@@ -22,6 +23,6 @@ spring.datasource.password=${POSTGRES_PASSWORD}
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:stats
+spring.datasource.url=jdbc:h2:mem:main-service
 spring.datasource.username=test
 spring.datasource.password=test
