--- a/stats/stats-server/src/main/resources/application-dev.properties
+++ b/stats/stats-server/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+server.port=9090
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:stats
 spring.datasource.username=test
